<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mTopLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="top"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mQuestionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/quiz_text"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/mTrueButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/true_text"
                android:textColor="@color/green"
                android:textSize="18sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="8dp"
                app:rippleColor="#4F4CAF50"
                app:strokeColor="@color/green"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/mFalseButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/false_text"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="8dp"
                app:rippleColor="#4FF44336"
                app:strokeColor="@color/red"
                app:strokeWidth="2dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/mPreviousButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/previous_button_text"
                android:textColor="#000000"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="1dp"
                app:rippleColor="#FFEB3B"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/mNextButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/next_button_text"
                android:textColor="#000000"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="1dp"
                app:rippleColor="#FFEB3B"
                app:strokeColor="#000000"
                app:strokeWidth="2dp" />
        </LinearLayout>

        <Button
            android:id="@+id/mResultsButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_button"
            android:textColor="@color/white"
            app:backgroundTint="#000000"
            app:rippleColor="#FFEB3B" />
    </LinearLayout>

</LinearLayout>